Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128254

Cannot build signed AAB with verbose deployment

XMLWordPrintable

    • Android
    • fd2c408af (dev), 589661c0d (6.8), b9e749331 (6.7), bff24119d (tqtc/lts-6.5)

      If we enable QT_ANDROID_SIGN_AAB and QT_ENABLE_VERBOSE_DEPLOYMENT androiddeployqt will exit with help page.

      The cmdline will result into this

      ... --aab --sign --verbose --release
      
      ...
      Package signing path and alias values are not specified.
      Using package signing store password found from the environment variable.
      Using package signing key password found from the environment variable.
      
      Syntax: androiddeployqt --output <destination> [options]
      

      If I manually try the cmdline and switch the order androiddeployqt will build and sign the AAB.

      ... --aab --verbose --sign --release
      
      ...
      Using package signing path and alias values found from the environment variables.
      Using package signing store password found from the environment variable.
      Using package signing key password found from the environment variable.
      

        For Gerrit Dashboard: QTBUG-128254
        # Subject Branch Project Status CR V

            semlanik Alexey Edelev
            misery André Klitzing
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes