androiddeployqt: Fix the --sign argument handling ordering

Allow using the follow arguments after '--sign' argument in
androiddeployqt. The previous fix had no effect since we should
consider the argument count first and the type of arguments next.

Amends 9c56a77027db2fedfc2b50f96ceaee5003a7d383

Fixes: QTBUG-128254
Task-number: QTBUG-109619
Pick-to: 6.5
Change-Id: I34eac4def94c1d0c8d304f383d60c1e21b7dc6a2
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit fd2c408af2f300e100d94a386743c7cbe74fadef)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 589661c0d5dc2430fb98f71f58d3a2ec83c73be5)